# vvProject

./: CMakeLists.txt  README.md  main.cpp  num.txt  numeri.py  numeri.txt
images/: build.sh
images/client/: Dockerfile  Dockerfile.dev
images/cnode/: Dockerfile  Dockerfile.dev
images/postgres/: Dockerfile  init.sql
images/server/: Dockerfile  Dockerfile.dev
myClient/: MyClient.h  MyClientHandler.h  MyServer.h  client-main.cpp  server-main.cpp
myServer/: MyClientHandler.h  MyServer.h  client-main.cpp  server-main.cpp
scripts/: build.sh  clean.sh  play.ps1  play.sh  query.sh  run.sh
source/: MyClient.h  client-main.cpp
source/connprotocol/: Client.h  ClientHandler.h  TCPServer.h
source/fifo/: CircularBuffer.h
source/loggers/: PGcommand.h  PostgreLogger.h
source/postgresql/: libpq-fe.h  pg_config.h  pg_config_manual.h
source/postgresql/internal/: fe-auth-sasl.h  libpq-int.h  port.h
source/postgresql/internal/libpq/: pqcomm.h
source/socket/: BufferedSocket.h  BufferedSocketReader.h  BufferedSocketWriter.h  ServerTCPSocket.h  SocketReader.h  SocketWriter.h
source/utils/: PostGresOid.h  Util.h
